--- a/Index-1.html
+++ b/Index-1.html
@@ -10,8 +10,6 @@
 
 		<div id="name">Jeff Lutz</div>
 
-		<img src="">
-
 		<links class="header">
 			<a href="">About</a>
 			<a href="">Portfolio</a>
@@ -20,37 +18,38 @@
 
 	</header>
 
-	<div class="container">
+	<section class="container">
 
-		<section id="Portfolio">
+		<div id="About-Me">
 		
-			<h1>Portfolio</h1>
+			<h1>About Me</h1>
 
-			<links class="header">
-				<a href="">About</a>
-				<a href="">Portfolio</a>
-				<a href="">Contact</a>
-				<a href="">Portfolio</a>
-				<a href="">Contact</a>
-			</links>
+			<img src="">
 
-		</section>
+			<p>
+			Hi, my name is Jeff. This section is about me...
+			</p>
+		
+		</div>
+		
+		<div id="Connect">
+			
+			<h1>Connect With Me</h1>
 
-		<h1>Connect With Me</h1>
-
-		<section id="Connect">
 			<links class="Connect">
 				<a href="">????????</a>
 				<a href="">LinkedIN</a>
 				<a href="">StackOverflow</a>
 			</links>
+		
+		</div>
 
-		<footer>
+	</section>
+	
+	<footer>
 			@ Copyright 2017 Jeff lutz
-		</footer>
-
-
-	</div>
+	</footer>
 
 </body>
+
 </html>
