--- a/Index-1.html
+++ b/Index-1.html
@@ -20,29 +20,41 @@
 
 	<section class="container">
 
-		<div id="About-Me">
+		<section id="About-Me">
 		
 			<h1>About Me</h1>
 
-			<img src="">
+			<img src="assets/images/IMG_1405.jpg">
 
 			<p>
 			Hi, my name is Jeff. This section is about me...
 			</p>
 		
-		</div>
+		</section>
 		
-		<div id="Connect">
+		<section id="Connect">
 			
-			<h1>Connect With Me</h1>
+			<h2>Connect With Me</h2>
 
 			<links class="Connect">
-				<a href="">????????</a>
-				<a href="">LinkedIN</a>
-				<a href="">StackOverflow</a>
+				<p class="github">
+					<a href="https://www.github.com">
+					<img src="assets/images/github.jpeg" alt="Go to GitHub" width="64" height="64" border="0">
+					</a>
+				</p>
+				<p class="linkedin">
+					<a href="https://www.linkedin.com">
+					<img src="assets/images/linkedin.jpeg" alt="Go to LinkedIn!" width="64" height="64" border="0">
+					</a>
+				</p>
+				<p class="stack">
+					<a href="https://www.stackoverflow.com">
+					<img src="assets/images/stackoverflow.jpeg" alt="Go to Stackoverflow!" width="64" height="64" border="0">
+					</a>
+				</p>
 			</links>
 		
-		</div>
+		</section>
 
 	</section>
 	
