--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,6 @@
 
 		<div id="name">Jeff Lutz</div>
 
-		<img src="">
-
 		<links class="header">
 			<a href="">About</a>
 			<a href="">Portfolio</a>
@@ -39,11 +37,28 @@
 		<h1>Connect With Me</h1>
 
 		<section id="Connect">
+			
+			<h2>Connect With Me</h2>
+
 			<links class="Connect">
-				<a href="">????????</a>
-				<a href="">LinkedIN</a>
-				<a href="">StackOverflow</a>
+				<p class="github">
+					<a href="https://www.github.com">
+					<img src="assets/images/github.jpeg" alt="Go to GitHub" width="64" height="64" border="0">
+					</a>
+				</p>
+				<p class="linkedin">
+					<a href="https://www.linkedin.com">
+					<img src="assets/images/linkedin.jpeg" alt="Go to LinkedIn!" width="64" height="64" border="0">
+					</a>
+				</p>
+				<p class="stack">
+					<a href="https://www.stackoverflow.com">
+					<img src="assets/images/stackoverflow.jpeg" alt="Go to Stackoverflow!" width="64" height="64" border="0">
+					</a>
+				</p>
 			</links>
+		
+		</section>
 
 		<footer>
 			@ Copyright 2017 Jeff lutz
