--- a/Index-1.html
+++ b/Index-1.html
@@ -2,39 +2,51 @@
 <html>
 <head>
 	<title>Portfolio Home</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-
-	<header>
-
-		<div id="name">Jeff Lutz</div>
-
-		<links class="header">
-			<a href="">About</a>
-			<a href="">Portfolio</a>
-			<a href="">Contact</a>
-		</links>
-
-	</header>
-
-	<section class="container">
-
-		<section id="About-Me">
 		
-			<h1>About Me</h1>
-
-			<img src="assets/images/IMG_1405.jpg">
-
-			<p>
-			Hi, my name is Jeff. This section is about me...
-			</p>
-		
-		</section>
-		
-		<section id="Connect">
+		<div id="header">
 			
-			<h2>Connect With Me</h2>
+			<div id="nametag">
+			<h1 id="name">Jeff Lutz</h1>
+		
+			<links class="links">
+				<a href="">About  |</a>
+				<a href="">  Portfolio  |</a>
+				<a href="">Contact</a>
+			</links>
+			</div>
+
+		</div>
+
+	<div id="container">
+
+		<div id="Main-Content">
+		
+		<div id="h2">
+			<h2 id="about">About Me</h2>
+		</div>
+			
+			<div id="paragraph">
+
+			<p><img align="left" src="assets/images/IMG_1405.jpg">
+			Hi, my name is Jeff. This section is about me...
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore sed quas ad ducimus reprehenderit ex repellendus dolorum odit delectus, hic, suscipit, eligendi voluptate recusandae accusantium minima nulla voluptas. Aliquid, nihil.<br>
+			
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis, deserunt nam ratione magnam aspernatur cum corporis iure animi sequi aliquid fugit itaque dolorum illum quis sapiente maiores autem velit reprehenderit.
+			</p>
+
+			</div>
+		
+		</div>
+		
+		<div id="Sidebar">
+			
+			<div id="h3">
+				<h3 id="connect">Connect With Me</h3>
+			</div>
 
 			<links class="Connect">
 				<p class="github">
@@ -54,13 +66,13 @@
 				</p>
 			</links>
 		
-		</section>
-
-	</section>
+		</div>
 	
-	<footer>
+	</div>
+
+		<div id="footer">
 			@ Copyright 2017 Jeff lutz
-	</footer>
+		</div>
 
 </body>
 
