--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
 	</header>
 
-	<div class="container">
+	<section class="container">
 
 		<section id="Portfolio">
 		
@@ -33,8 +33,8 @@
 			</links>
 
 		</section>
-
-		<h1>Connect With Me</h1>
+	
+	</section>
 
 		<section id="Connect">
 			
