--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,11 @@
 			
 			<div id="Portfolio">
 
-				<img src="assets/images/PH-1.jpg" id="img1">
-				<img src="assets/images/PH-2.jpg" id="img1">
-				<img src="assets/images/PH-3.jpg" id="img1">
-				<img src="assets/images/PH-4.jpg" id="img1">
-				<img src="assets/images/PH-5.jpg" id="img1">	
+				<a href="#" ><img src="assets/images/PH-1.jpg" id="img1"></a>
+				<a href="#" ><img src="assets/images/PH-2.jpg" id="img1"></a>
+				<a href="#" ><img src="assets/images/PH-3.jpg" id="img1"></a>
+				<a href="#" ><img src="assets/images/PH-4.jpg" id="img1"></a>
+				<a href="#" ><img src="assets/images/PH-5.jpg" id="img1"></a>
 
 			</div>
 		
