--- a/contact.html
+++ b/contact.html
@@ -33,9 +33,9 @@
 
 			<form action="/action_page.php">
   				Name:<br>
-  				<input type="text" name="Name" value="Your Name"><br>
+  				<input type="text" name="Name" placeholder="Your Name"><br><br>
   				Email:<br>
-  				<input type="text" name="Email" value="johnsmith@whatever.com"><br>
+  				<input type="text" name="Email" placeholder="johnsmith@whatever.com"><br><br>
 				Message:<br>
   				<textarea name="message" rows="10" cols="30">
 				</textarea>
